# a2a-smol-adapter

./: .gitignore  BACKLOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: check-tests.sh  lint-on-save.sh
.claude/rules/: a2a-protocol.md  python-quality.md  smolagents.md  testing.md
.github/workflows/: ci.yml
examples/: basic_client.py  basic_server.py
src/a2a_smol_adapter/: __init__.py  client_tool.py  server.py
tests/: conftest.py  test_client_tool.py  test_server.py
tests/integration/: test_end_to_end.py
